tests/invalid/type/module_missing.pts
import test.ghost.{ping};

function main() : void {
    ping();
}
